# zim

./: .gitmodules  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: cluster.rs  directory_entry.rs  directory_iterator.rs  errors.rs  lib.rs  namespace.rs  store.rs  zim.rs
tests/: fixtures.rs
