[package]
name = "zim"
version = "0.3.0"
authors = ["Friedel Ziegelmayer <dignifiedquire@gmail.com>", "Andrew Chin <achin@eminence32.net>"]
documentation = "https://docs.rs/zim/"
repository = "https://github.com/dignifiedquire/zim"
homepage = "https://github.com/dignifiedquire/zim"
description = "ZIM reading and extraction"
readme = "README.md"
license = "Apache-2.0/MIT"
edition = "2018"

keywords = ["parser", "zim"]
categories = ["encoding", "parser-implementations"]

[dependencies]
byteorder = "^1.2"
memmap = "^0.7"
xz2 = "^0.1"
bitreader = "^0.3"
md-5 = "0.8.0"
rental = "0.5.5"

[dev-dependencies]
clap = "^2.23"
stopwatch = "^0.0.7"
pbr = "^1.0"
hex = "0.4.0"
indicatif = "0.13.0"
rayon = "1.3.0"

[[example]]
name = "extract_zim"

[[example]]
name = "ipfs_link"

[[example]]
name = "zim_info"
